feat: add some more styles

--- a/packages/ui/src/lib/styles/abstracts/_colors.scss
+++ b/packages/ui/src/lib/styles/abstracts/_colors.scss
@@ -12,24 +12,25 @@ $light-theme: (
 		'600': oklch(36.049% 0.18967 287.6),
 		'700': oklch(28.93% 0.14639 288.72),
 		'800': oklch(21.303% 0.09999 291.11),
-		'900': oklch(12.951% 0.04734 299.01),
+		'900': oklch(12.951% 0.04734 299.01)
 	),
 	'surface': (
-		'000': oklch(96.065% 0.02199 300.074),
-		'100': oklch(86.156% 0.01835 299.878),
-		'200': oklch(76.708% 0.02723 307.961),
-		'300': oklch(66.386% 0.01052 298.951),
-		'400': oklch(56.675% 0.01633 308.009),
-		'500': oklch(46.994% 0.01904 309.781),
-		'600': oklch(37.025% 0.01574 300.738),
-		'700': oklch(26.897% 0.01916 303.279),
-		'800': oklch(16.107% 0.01336 307.498),
-		'900': oklch(6.924% 0.00801 284.109)
+		'000': oklch(98.51% 0 none),
+		'100': oklch(95.318% 0.0017 325.59),
+		'200': oklch(89.279% 0.0029 308.42),
+		'300': oklch(83.526% 0.00466 314.8),
+		'400': oklch(78.307% 0.00649 317.75),
+		'500': oklch(69.849% 0.00918 325.67),
+		'600': oklch(59.725% 0.01265 321.34),
+		'700': oklch(48.861% 0.0113 320.57),
+		'800': oklch(36.829% 0.00784 317.73),
+		'900': oklch(20.219% 0.00421 308.23),
+		'1000': oklch(16.073% 0.00265 325.7)
 	)
 );
 
 $dark-theme: (
-	'brand': map-get(
+	'brand': map.get(
 			$map: $light-theme,
 			$key: 'brand'
 		),
