--- a/packages/ui/src/lib/styles/abstracts/_index.scss
+++ b/packages/ui/src/lib/styles/abstracts/_index.scss
@@ -1,4 +1,6 @@
 @forward 'colors';
-@forward 'sizes';
+// @forward 'sizes';
 @forward 'radius';
 @forward 'tokens';
+@forward 'mixins';
+@forward 'typography';
