--- a/packages/ui/src/lib/styles/main.scss
+++ b/packages/ui/src/lib/styles/main.scss
@@ -1,3 +1,6 @@
+@use 'sass:meta';
 @layer reset, base, layout, utilities, components;
 
-
+@include meta.load-css('base');
+@include meta.load-css('layout');
+// @include meta.load-css("utilities/index");
