feat: add space-between utility class for flex layout

--- a/packages/ui/src/lib/styles/layout/_flex.scss
+++ b/packages/ui/src/lib/styles/layout/_flex.scss
@@ -11,3 +11,8 @@
 	--_flex-container-width: auto;
 	justify-content: center;
 }
+
+.space-between {
+	--_flex-container-width: 100%;
+	justify-content: space-between;
+}
